@@ -82,7 +82,6 @@ class cms_config implements ArrayAccess
     $this->_types['db_name'] = self::TYPE_STRING;
     $this->_types['db_port'] = self::TYPE_INT;
     $this->_types['db_prefix'] = self::TYPE_STRING;
-    $this->_types['use_adodb_lite'] = self::TYPE_BOOL;
     $this->_types['root_url'] = self::TYPE_STRING;
     $this->_types['ssl_url'] = self::TYPE_STRING;
     $this->_types['root_path'] = self::TYPE_STRING;
@@ -193,9 +192,6 @@ class cms_config implements ArrayAccess
 	stack_trace();
 	die('FATAL ERROR: Could not find database connection key '.$key.' in the config file');
 	break;
-
-      case 'use_adodb_lite':
-	return true;
 
       case 'persist_db_conn':
 	return false;
